# trixel

./: .gitignore  Cargo.toml  README.md  debug_halftone.rs  debug_test.py  wrangler.jsonc
.cargo/: config.toml
crates/ternac/: Cargo.toml
crates/ternac/src/: main.rs
crates/ternac/tests/: anchor_pipeline_tests.rs  gauss_pipeline_tests.rs  halftone_decode_test.rs  miserable_work_test.rs  pipeline_tests.rs
crates/ternac_core/: Cargo.toml
crates/ternac_core/src/: lib.rs
crates/ternac_core/tests/: codec_tests.rs  ecc_tests.rs  gf3_tests.rs  rs_tests.rs  trit_matrix_tests.rs
crates/ternac_cv/: Cargo.toml
crates/ternac_cv/src/: geometry.rs  lib.rs
crates/ternac_cv/tests/: luminance_bands_tests.rs  vision_anchor_tests.rs  vision_tests.rs
crates/ternac_render/: Cargo.toml
crates/ternac_render/src/: font.rs  glyphs.rs  halftone.rs  lib.rs
crates/ternac_render/tests/: font_engine_tests.rs  font_tests.rs  halftone_renderer_tests.rs  render_anchor_tests.rs  renderer_tests.rs
crates/ternac_solver/: Cargo.toml
crates/ternac_solver/src/: anchor.rs  gauss_solver.rs  lib.rs  z3_solver.rs
crates/ternac_solver/tests/: anchor_tests.rs  constraint_tests.rs  gauss_tests.rs  solver_tests.rs  z3_tests.rs
crates/trixel/: Cargo.toml
crates/trixel/src/: main.rs
crates/trixel/tests/: anchor_pipeline_tests.rs  gauss_pipeline_tests.rs  halftone_decode_test.rs  miserable_work_test.rs  pipeline_tests.rs
crates/trixel_core/: Cargo.toml
crates/trixel_core/src/: gf3.rs  lib.rs  rs.rs  trigrid.rs
crates/trixel_core/tests/: codec_tests.rs  ecc_tests.rs  gf3_tests.rs  rs_tests.rs  trit_matrix_tests.rs
crates/trixel_cv/: Cargo.toml
crates/trixel_cv/src/: geometry.rs  lib.rs  tri_cv.rs
crates/trixel_cv/tests/: luminance_bands_tests.rs  vision_anchor_tests.rs  vision_tests.rs
crates/trixel_render/: Cargo.toml
crates/trixel_render/src/: font.rs  lib.rs  tri_diffusion.rs  tri_render.rs
crates/trixel_render/tests/: font_engine_tests.rs  font_tests.rs  halftone_renderer_tests.rs  render_anchor_tests.rs  renderer_tests.rs
crates/trixel_scanner/: Cargo.toml
crates/trixel_scanner/src/: lib.rs
crates/trixel_scanner/tests/: scanner_tests.rs
crates/trixel_solver/: Cargo.toml
crates/trixel_solver/src/: anchor.rs  gauss.rs  gauss_solver.rs  lib.rs  tri_anchor.rs  tri_gauss_solver.rs
crates/trixel_solver/tests/: anchor_tests.rs  constraint_tests.rs  gauss_tests.rs  solver_tests.rs
scripts/: composite.py
web/: index.html  manifest.json  sw.js  wrangler.jsonc
web/scanner/: index.html  manifest.json  scanner.js  style.css  sw.js
web/scanner/pkg/: package.json  trixel_scanner.d.ts  trixel_scanner.js  trixel_scanner_bg.wasm  trixel_scanner_bg.wasm.d.ts
