[workspace]
members = [
    "crates/trixel_core",
    "crates/trixel_cv",
    "crates/trixel_solver",
    "crates/trixel_render",
    "crates/trixel_scanner",
    "crates/trixel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
trixel_core = { path = "crates/trixel_core" }
trixel_cv = { path = "crates/trixel_cv" }
trixel_solver = { path = "crates/trixel_solver" }
trixel_render = { path = "crates/trixel_render" }
image = "0.25"
imageproc = "0.25"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
