[package]
name = "ternac"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ternac"
path = "src/main.rs"

[dependencies]
ternac_core = { workspace = true }
ternac_cv = { workspace = true }
ternac_solver = { workspace = true }
ternac_render = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
