[package]
name = "trixel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trixel"
path = "src/main.rs"

[dependencies]
trixel_core = { workspace = true }
trixel_cv = { workspace = true }
trixel_solver = { workspace = true }
trixel_render = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
