[package]
name = "trixel_scanner"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trixel_core = { workspace = true }
trixel_cv = { workspace = true }
trixel_solver = { workspace = true }
image = { workspace = true }
wasm-bindgen = "0.2"

[dev-dependencies]
trixel_render = { workspace = true }
